迭代升级为后端服务：1、脚本转为服务，支持接口调用；2、支持多模型选择；3、支持文件上传或者直接传入待处理文本

--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,7 @@ multiprocess>=0.70.0
 xxhash>=3.0.0
 cryptography>=41.0.5,<44.0.0
 urllib3>=1.24.2,<2.4.0
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+python-multipart>=0.0.6
+requests>=2.28.0
