add:支持qwen-flash纠错补全

--- a/dev.env
+++ b/dev.env
@@ -23,3 +23,7 @@ ENTITY_CONFIG_PATH=entity_config.json
 
 # 模型是否已下载（true/false）
 MODEL_DOWNLOADED=true
+
+# DashScope API密钥（用于文本预处理功能，qwen-flash模型）
+# 获取方式：https://dashscope.console.aliyun.com/apiKey
+DASHSCOPE_API_KEY=sk-1bf01ad176344a9a9e77290830a2418c
