--- a/.env_template
+++ b/.env_template
@@ -23,3 +23,7 @@ ENTITY_CONFIG_PATH=entity_config.json
 
 # 模型是否已下载（true/false）
 MODEL_DOWNLOADED=true
+
+# DashScope API密钥（用于文本预处理功能，qwen-flash模型）
+# 获取方式：https://dashscope.console.aliyun.com/apiKey
+DASHSCOPE_API_KEY=your_api_key_here
