实现基于MySQL表的补全替换

--- a/.env_template
+++ b/.env_template
@@ -27,3 +27,20 @@ MODEL_DOWNLOADED=true
 # DashScope API密钥（用于文本预处理功能，qwen-flash模型）
 # 获取方式：https://dashscope.console.aliyun.com/apiKey
 DASHSCOPE_API_KEY=your_api_key_here
+
+# MySQL数据库配置（用于地址补全功能）
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
+MYSQL_USER=root
+MYSQL_PASSWORD=your_password_here
+MYSQL_DATABASE=your_database_name
+MYSQL_CHARSET=utf8mb4
+MYSQL_MAX_CONNECTIONS=10
+MYSQL_CONNECT_TIMEOUT=10
+# 区域数据表名
+MYSQL_REGION_TABLE=region_table
+# 区域类型映射（可选，如果数据库中的region_type值不同，请修改以下配置）
+# REGION_TYPE_PROVINCE=1001  # 省
+# REGION_TYPE_CITY=1002       # 市
+# REGION_TYPE_EXP_AREA=1003 # 区/县
+# REGION_TYPE_STREET=1004   # 街道/镇
