支持地址结构化解析模型

--- a/dev.env
+++ b/dev.env
@@ -12,12 +12,6 @@ SHOW_DOMAINS=prod.example.com,www.example.com
 # 模型路径（相对于项目根目录）
 MODEL_PATH=model/nlp_structbert_siamese-uie_chinese-base
 
-# 数据文件夹路径
-DATA_DIR=data
-
-# 输出文件夹路径
-OUTPUT_DIR=output
-
 # 实体配置文件路径
 ENTITY_CONFIG_PATH=entity_config.json
 
@@ -34,7 +28,7 @@ MYSQL_PORT=3306
 MYSQL_USER=read_dashboard
 MYSQL_PASSWORD=jpeihn@o9qPq5KN#IPZB0Al%5jX
 MYSQL_DATABASE=goods_center
-MYSQL_CHARSET=utf8mb4
+MYSQL_CHARSET=utf8
 MYSQL_MAX_CONNECTIONS=10
 MYSQL_CONNECT_TIMEOUT=10
 # 区域数据表名
