--- a/show.env
+++ b/show.env
@@ -1,7 +1,7 @@
 ﻿# 环境配置模板
 # 复制此文件为 .env 并修改相应配置
 # 环境类型: dev_env、show_env 或 prod_env
-ENV_TYPE=dev_env
+ENV_TYPE=show_env
 
 # 注意：域名列表配置已移至代码中（src/config/env_loader.py 的 ENV_DOMAIN_MAPPING）
 # 如需修改域名映射，请直接编辑 env_loader.py 文件
