--- a/.env_template
+++ b/.env_template
@@ -1,16 +1,18 @@
 ﻿# 环境配置模板
 # 复制此文件为 .env 并修改相应配置
-# 环境类型: dev_env 或 show_env
+# 环境类型: dev_env、show_env 或 prod_env
 ENV_TYPE=dev_env
 
-# 开发环境域名列表（用逗号分隔）
-DEV_DOMAINS=localhost,127.0.0.1,dev.example.com
+# 注意：域名列表配置已移至代码中（src/config/env_loader.py 的 ENV_DOMAIN_MAPPING）
+# 如需修改域名映射，请直接编辑 env_loader.py 文件
+# 以下配置项保留用于向后兼容，但不会被 env_loader 使用
+# DEV_DOMAINS=localhost,127.0.0.1,dev.example.com
+# SHOW_DOMAINS=show.example.com,demo.example.com
+# PROD_DOMAINS=prod.example.com,www.example.com
 
-# 生产环境域名列表（用逗号分隔）
-SHOW_DOMAINS=prod.example.com,www.example.com
-
-# 模型路径（相对于项目根目录）
-MODEL_PATH=model/nlp_structbert_siamese-uie_chinese-base
+# 模型基础路径（相对于项目根目录）
+# 注意：具体模型选择通过API接口参数控制，这里只配置模型存储的基础目录
+MODEL_PATH=model/
 
 # 实体配置文件路径
 ENTITY_CONFIG_PATH=entity_config.json
